<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context="com.winso.break_law.activity.MainActivity" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="3dp" >

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/main_btn_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/image_btn_point_press"
                android:minWidth="60dp"
                android:text="@string/s_point"
                android:textSize="@dimen/text_size_12" />

            <Button
                android:id="@+id/main_btn_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/image_btn_answer_press"
                android:text="@string/s_answer"
                android:textSize="@dimen/text_size_12" />

            <Button
                android:id="@+id/main_btn_review_eachother"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/image_btn_review_press"
                android:minWidth="60dp"
                android:text="@string/s_review_eachother"
                android:textSize="@dimen/text_size_12" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/main_btn_leave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/image_btn_leave_press"
                android:text="@string/s_leave"
                android:textSize="@dimen/text_size_12" />

            <Button
                android:id="@+id/main_btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/image_btn_setting_press"
                android:text="@string/s_sys_setting"
                android:textSize="@dimen/text_size_12" />

            <Button
                android:id="@+id/bt_select_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/pywg"
                android:text="@string/s_leave"
                android:textSize="@dimen/text_size_12"
                android:visibility="invisible" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/text_size_16" />

    <ImageView
        android:id="@+id/image_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/eastsun_company_logo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:src="@drawable/main_mid" />

</RelativeLayout>