<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.winso.interactive"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context="com.winso.interactive.SettingActivity" >

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/activity_main_header" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp" >
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/include_toolbar"
        android:paddingLeft="15dp"
        android:paddingRight="12dp" >
	
        <TableLayout 
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            
            <ImageView
	            android:id="@+id/imageLine"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:scaleType="fitXY"
	            android:src="@drawable/line" />
            
            <TableRow 
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
		         <TextView
		            android:id="@+id/tv_title"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="20dp"
		            android:textStyle="bold"
		            android:textSize="18dp"
		            android:layout_weight="2"
		            android:text="@string/cent_ip" />
		        
		        <EditText
		            android:id="@+id/ed_cent_ip"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="20dp"
		            android:background="@drawable/edit_border"
		            android:hint="输入IP或者域名"
		            android:layout_weight="8" >
		
		            <requestFocus />
		        </EditText>
            </TableRow>
            
            <ImageView
	            android:id="@+id/ImageView01"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_below="@+id/ed_cent_ip"
	            android:layout_marginTop="13dp"
	            android:scaleType="fitXY"
	            android:src="@drawable/line" />
            
            <TableRow 
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
		        <TextView
		            android:id="@+id/tx_break_option"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="20dp"
		            android:textStyle="bold"
		            android:textSize="18dp"
		            android:layout_weight="2"
		            android:text="@string/s_project_name"/>

		        <EditText
		             android:id="@+id/ed_project"
		             android:layout_width="fill_parent"
		             android:layout_height="wrap_content"
		             android:background="@drawable/edit_border"
		             android:autoLink="all"             
		             android:layout_marginTop="20dp"
		             android:layout_weight="8"
		             android:hint="@string/s_click_select_project" />  
            </TableRow>
        </TableLayout>

        <ImageView
             android:id="@+id/ImageView04"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignRight="@id/tableLayout1"
             android:layout_below="@id/tableLayout1"
             android:scaleType="fitXY"
             android:layout_marginTop="13dp"
             android:src="@drawable/line" />
        
         <com.winso.comm_library.widget.SwitchButton
             android:id="@+id/st_enable_message_night"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/ImageView04"
             android:layout_below="@+id/ImageView04"
             android:layout_weight="0.08"
             android:layout_marginTop="15dp"
             android:text="@string/s_enable_message_night"
             app:frameDrawable="@drawable/switch_frame"
             app:sliderDrawable="@drawable/selector_switch_slider"
             app:stateDrawable="@drawable/selector_switch_state"
             app:stateMaskDrawable="@drawable/switch_state_mask"
             app:withTextInterval="16dp" />
         
         <ImageView
             android:id="@+id/ImageView08"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignRight="@+id/st_enable_message_v"
             android:layout_below="@id/st_enable_message_night"
             android:scaleType="fitXY"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:src="@drawable/line" />

         

         <com.winso.comm_library.widget.SwitchButton
             android:id="@+id/st_enable_message_v"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/st_enable_message_night"
             android:layout_centerHorizontal="true"
             android:layout_weight="0.02"
             android:text="@string/s_enable_message_v"
             android:layout_marginTop="15dp"
             app:frameDrawable="@drawable/switch_frame"
             app:sliderDrawable="@drawable/selector_switch_slider"
             app:stateDrawable="@drawable/selector_switch_state"
             app:stateMaskDrawable="@drawable/switch_state_mask"
             app:withTextInterval="16dp" />

         <ImageView
             android:id="@+id/ImageView07"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignRight="@+id/st_enable_message_v"
             android:layout_below="@id/st_enable_message_v"
             android:scaleType="fitXY"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:src="@drawable/line" />
         
         <com.winso.comm_library.widget.SwitchButton
             android:id="@+id/st_enable_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/st_enable_message_v"
             android:layout_below="@+id/st_enable_message_v"
             android:text="@string/s_enable_message"
             android:layout_marginTop="15dp"
             app:frameDrawable="@drawable/switch_frame"
             app:sliderDrawable="@drawable/selector_switch_slider"
             app:stateDrawable="@drawable/selector_switch_state"
             app:stateMaskDrawable="@drawable/switch_state_mask"
             app:withTextInterval="16dp" />

         <ImageView
             android:id="@+id/ImageView06"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignRight="@+id/st_enable_message_v"
             android:layout_below="@id/st_enable_message"
             android:scaleType="fitXY"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:src="@drawable/line" />
         
         <com.winso.comm_library.widget.SwitchButton
             android:id="@+id/st_enable_2g3g"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/st_enable_message"
             android:layout_below="@+id/st_enable_message"
             android:layout_weight="0.02"
             android:text="@string/s_enable_2g_3g"
             android:layout_marginTop="15dp"
             app:frameDrawable="@drawable/switch_frame"
             app:sliderDrawable="@drawable/selector_switch_slider"
             app:stateDrawable="@drawable/selector_switch_state"
             app:stateMaskDrawable="@drawable/switch_state_mask"
             app:withTextInterval="8dp" />

         <ImageView
             android:id="@+id/ImageView02"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignRight="@+id/st_enable_message_v"
             android:layout_below="@+id/st_enable_2g3g"
             android:scaleType="fitXY"
             android:layout_marginTop="5dp"
             android:src="@drawable/line" />

         <com.winso.comm_library.widget.SwitchButton
             android:id="@+id/st_auto_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/ImageView02"
             android:layout_below="@+id/ImageView02"
             android:layout_marginTop="15dp"
             android:layout_weight="0.02"
             android:text="@string/login_dialog_autoLogin"
             app:frameDrawable="@drawable/switch_frame"
             app:sliderDrawable="@drawable/selector_switch_slider"
             app:stateDrawable="@drawable/selector_switch_state"
             app:stateMaskDrawable="@drawable/switch_state_mask"
             app:withTextInterval="8dp" />

         <ImageView
             android:id="@+id/ImageView03"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignRight="@+id/st_enable_message_v"
             android:layout_below="@+id/st_auto_login"
             android:scaleType="fitXY"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:src="@drawable/line" />
         
         <RelativeLayout 
             android:id="@+id/layout_about"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/ImageView03"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="5dp"
             >
             
             <TextView 
                 android:id="@+id/about_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/about"
                 android:textSize="20dp"/>
             
             <ImageButton 
                 android:id="@+id/about_imb"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_back_logo"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="15dp"/>
         </RelativeLayout>

         <ImageView
             android:id="@+id/ImageView05"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignRight="@+id/st_enable_message_v"
             android:layout_below="@id/layout_about"
             android:scaleType="fitXY"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:src="@drawable/line" />
         
         <Button
             android:id="@+id/exit_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/ImageView05"
             android:background="@drawable/image_btn_check_press"
             android:text="@string/loginOut"
             android:layout_marginTop="15dp"
             android:textSize="20dp"
             android:textColor="@color/white"
             android:visibility="invisible"/>
         
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rg_tabs"
        style="@style/BreakLaw.MainTab"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" 
        android:visibility="invisible">

        <RadioButton
            android:id="@+id/main_btn_sum_report"
            style="@style/BreakLaw.MainTab.Button"
            android:button="@null"
            android:drawableTop="@drawable/func_cathe_photo"
            android:text="@string/func_catch_photo"
            android:visibility="invisible" />

        <RadioButton
            android:id="@+id/bt_write_answer"
            style="@style/BreakLaw.MainTab.Button"
            android:button="@null"
            android:drawableTop="@drawable/func_reform_d"
            android:text="@string/func_reform"
            android:visibility="invisible" />

        <RadioButton
            android:id="@+id/main_footbar_func_read"
            style="@style/BreakLaw.MainTab.Button"
            android:button="@null"
            android:drawableTop="@drawable/func_read"
            android:text="@string/func_read"
            android:visibility="invisible" />

        <RadioButton
            android:id="@+id/btn_about"
            style="@style/BreakLaw.MainTab.Button"
            android:button="@null"
            android:drawableTop="@drawable/btn_about_pic_sel"
            android:text="@string/s_about" 
            android:visibility="invisible"/>

    </RadioGroup>

</RelativeLayout>